deploy/k8s/invoicing-customer-api-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-api-db
  template:
    metadata:
      labels:
        app: customer-api-db
    spec:
      containers:
        - name: customer-api-db-mongo
          image: mongo:3.6.18
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - mountPath: /data
              name: mongo-data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: customer-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: customer-api-db
  labels:
    app: customer-api-db
spec:
  selector:
    app: customer-api-db
  ports:
    - port: 27017
