deploy/k8s/invoicing-customer-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoicing-customer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoicing-customer-api
  paused: true
  template:
    metadata:
      labels:
        app: invoicing-customer-api
    spec:
      containers:
        - name: invoicing-customer-api
          image: invoicing-customer-api
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: invoicing-customer-api
spec:
  selector:
    app: invoicing-customer-api
  ports:
    - port: 80
