deploy/k8s/invoicing-identityservice-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-db
  template:
    metadata:
      labels:
        app: identity-db
    spec:
      containers:
        - name: identity-db-postgres
          image: postgres:12.3
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgredb-data
      volumes:
        - name: postgredb-data
          persistentVolumeClaim:
            claimName: identity-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: identity-db
  labels:
    app: identity-db
spec:
  selector:
    app: identity-db
  ports:
    - port: 5432
